Add `description` meta tag for SEO

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Eyob Tariku - About Me</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="My name is Eyob Tariku. I am a full-stack developer in Addis Ababa, Ethiopia. I build single-page applications & API services using Angular & Django frameworks.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/fonts/linecons/style.css">
 </head>
